[package]
name = "set-var"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#zhscript2-no-std = { path = "../../zhscript2-no-std-rust", version = "0.1.5", features = ["no"] }
zhscript2-no-std = { git = "https://github.com/zzzzzzzzzzz0/zhscript2-no-std-rust", version = "0.1.5", features = ["no"] }
